Ensure readable summaries should featured image not load

--- a/hugo/assets/sass/components/_post-lists.scss
+++ b/hugo/assets/sass/components/_post-lists.scss
@@ -104,6 +104,12 @@
               height: 100%;
               object-fit: cover;
               border-radius: 0.5rem;
+              font-size: 0; // Hide alt text if image is broken
+              @include switch(
+                background-color,
+                var(--shade),
+                var(--dark-green)
+              );
               @include switch(mix-blend-mode, hard-light, hard-light);
             }
           }
@@ -113,7 +119,6 @@
           position: relative;
           margin: 1rem;
           border-radius: 0.5rem;
-          // backdrop-filter: blur(1rem);
           transition: all 0.5s ease-in-out;
           z-index: 10;
 
@@ -123,7 +128,6 @@
             display: block;
             position: absolute;
             border-radius: 0.7rem;
-            // background-color: var(--dark-shade);
             transition: all 750ms ease-in-out;
             z-index: -1;
           }
